--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ en este caso lo que quería era ponerle una especie de degradado cuando paso el 
   transition: opacity 0.5s ease; 
   background-color: #7e7e7e;
   opacity: 0.2;
+  width: 7%;
   
 }
 
@@ -21,6 +22,7 @@ en este caso lo que quería era ponerle una especie de degradado cuando paso el 
   transition: opacity 0.5s ease; 
   background-color: #7e7e7e;
   opacity: 0.2;
+  width: 7%;
 } 
 
 .carousel-control-prev:hover{
@@ -48,6 +50,34 @@ en este caso lo que quería era ponerle una especie de degradado cuando paso el 
 }
 .form-control #searchInput{
   width: 50%;
+}
+
+.input-group{
+  width: 55%;
+}
+
+#searchContainer{
+ 
+  background-color: rgba(133, 151, 145, 0.753);
+  width: 40%;
+  height: 180px;
+  opacity: 0.6;
+  size: 50%;
+
+}
+
+/* 
+Aquí cambié de recurso y lo hice con estilos en línea (inline styles) de React/JSX, que funcionan con la estructura "style = {{propiedades:'valores'}}
+#inputContainer #btnBuscar{
+  width: 80%!important;
+} */
+
+#AgregarContainer{
+  background-color: rgba(133, 151, 145, 0.753);
+  width: 40%;
+  height: 550px;
+  opacity: 0.6;
+  size: 50%;
 }
 
 
